corrected javascript tag in the HTML file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Arnold Schwarzenegger Guessing Game</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/javascript/games.css">
 </head>
 <body>
     <div id="main-container" class="container">
@@ -18,6 +17,6 @@
             
         </section>
     </div>
-    
 </body>
+<script type="text/javascript" src="assets/javascript/games.js"></script>
 </html>
